--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:supportsRtl="true"
         android:usesCleartextTraffic="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity" android:theme="@style/AppTheme.NoActionBar">
+
+        </activity>
         <activity
             android:name=".ChooseCategoryActivity"
             android:theme="@style/AppTheme.NoActionBar" />
