--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,4 +81,6 @@ dependencies {
     implementation 'com.github.esafirm.android-image-picker:rximagepicker:2.2.0'
     // If you have a problem with Glide, please use the same Glide version or simply open an issue
     implementation 'com.github.bumptech.glide:glide:4.5.0'
+    implementation 'com.google.android.material:material:1.1.0-alpha07'
+
 }
