--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,5 +83,6 @@ dependencies {
     // If you have a problem with Glide, please use the same Glide version or simply open an issue
     implementation 'com.github.bumptech.glide:glide:4.5.0'
     implementation 'com.google.android.material:material:1.1.0-alpha07'
-
+    implementation 'com.github.WrathChaos:MediaPickerLib:0.2.0'
+    implementation 'com.github.smarteist:autoimageslider:1.3.2-appcompat'
 }
