--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
         applicationId "ash.pickshunter"
         minSdkVersion 23
         targetSdkVersion 28
-        versionCode 11
+        versionCode 12
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -85,4 +85,5 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0-alpha07'
     implementation 'com.github.WrathChaos:MediaPickerLib:0.2.0'
     implementation 'com.github.smarteist:autoimageslider:1.3.2-appcompat'
+    implementation 'com.phelat:navigationresult:1.0.0-beta01'
 }
